add_subdirectory(Script_ABWithoutAB)
add_subdirectory(Script_AniName)
add_subdirectory(Script_AniName_Adp)
add_subdirectory(Script_AttackSpeed)
add_subdirectory(Script_CrashReport)
add_subdirectory(Script_DumpProperties)
add_subdirectory(Script_FontScale)
add_subdirectory(Script_LearnPoints)
add_subdirectory(Script_ModMe)
add_subdirectory(Script_MonsterDamage)
add_subdirectory(Script_MouseDrag)
add_subdirectory(Script_NoSVM)
add_subdirectory(Script_RemoteControl)
add_subdirectory(Script_Subtitles)
add_subdirectory(Script_Tracer)
add_subdirectory(Script_UpdatePackLavaFix)
